--- a/src/main/resources/assets/rummikubmod/lang/en_us.json
+++ b/src/main/resources/assets/rummikubmod/lang/en_us.json
@@ -4,6 +4,8 @@
   "item.rummikubmod.dried_cannabis": "Dried Cannabis",
   "item.rummikubmod.cannabis_cookie": "Suspicious Cookie",
 
+  "item.rummikubmod.jonko": "Jonko",
+
   "block.rummikubmod.cannabis_block": "Dried Cannabis Block",
   "block.rummikubmod.cannabis_bush": "Cannabis Plant",
 
