--- a/src/main/resources/assets/rummikubmod/lang/en_us.json
+++ b/src/main/resources/assets/rummikubmod/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.rummikubmod.cannabis": "Cannabis",
   "item.rummikubmod.dried_cannabis": "Dried Cannabis",
   "item.rummikubmod.cannabis_cookie": "Suspicious Cookie",
+  "item.rummikubmod.kebab": "Kebab",
 
   "item.rummikubmod.jonko": "Jonko",
 
